jumbotron updates. I'll come back to fixing the button layout on mobile later

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -23,6 +23,7 @@ body {
 
 	@media (max-width: 979px)
 	{
+		padding-top: 70px;
 		padding-bottom: 50px;
 	}
 }
@@ -254,7 +255,7 @@ footer.footer {
 }
 
 
-.hero-unit {
+.jumbotron {
 	// goes into theme
 	background: #56BCDA;
 	color: white;
